--- a/4_report/src/aquasat_outline.Rmd
+++ b/4_report/src/aquasat_outline.Rmd
@@ -98,11 +98,11 @@ hist.data.prep <- function(x){
 
 # Introduction
 
-  The production of and easy access to water quality data is a vital first step towards both understanding the natural and anthropogenic drivers of water quality variation and for using this knowledge to protect and manage inland water quality [@Srebotnjak2012]. Collecting such valuable data has historically been expensive, time-consuming, and difficult to maintain useable and open datasets. However in many developed nations, over the last 10-20 years many of these data access problems have been actively addressed leading to the publication and maintenance of large open-access data repositories on water quality [@Read2017;@Soranno2017]. However, these datasets are still limited to the relatively time-intensive process of field sampling, which limits the number of water-bodies that can be observed and the spatial variation in water quality captured within a single waterbody. Furthermore, many nations may not have access to such robust historic water quality sampling data. One way to augment these *in-situ* sampling efforts and to provide water quality informatino in places with no data, is through using satellite remote sensing detection of water quality parameters. 
+  The production of and easy access to water quality data is a vital first step towards understanding natural and anthropogenic drivers of aquatic ecosystem degradation and for using this knowledge to protect and manage inland waters [@Srebotnjak2012]. Collecting such valuable data has historically been expensive and time-consuming, and it has often proved difficult to maintain useable and open datasets.  In many developed nations, however, over the last 10-20 years many of these data access problems have been actively addressed, leading to the publication and maintenance of large open-access data repositories of water quality measurements  [@Read2017;@Soranno2017;@Lack2000;@Ballantine2014]. Although they contain millions of individual measurements, these datasets remain limited to the relatively time-intensive process of field sampling, which limits the number of water-bodies that can be observed and the spatial variation in water quality captured within a single waterbody. Furthermore, access to such robust historic water quality sampling data remains limited to a few economically developed countries. With satellite remote sensing detection of water quality, we can augment these *in-situ* sampling efforts and provide water quality information in places with little or no data.
   
-  Since the beginning of the Landsat missions, limnologists, oceanographers, and hydrologists have been interested in developing universal algorithms for extracting water quality information from remotely sensed images [@Holyer1978;@Ritchie1976;@Maul1975;@Klemas1973;@Clarke1970]. Since these early efforts there has been almost fifty years of work with the basic goal of using spectral information to predict water quality parameters like total suspended solids (TSS), Chlorophyll a (Chl_a), colored dissolved organic matter, and secchi disk depth (SDD). However, progress towards universal algorithms and unified approaches has been slow [@Bukata2013;@Blondeau-Patissier2014;@Gholizadeh2016], with most papers published focusing on developing predictive methods as opposed to using predictions to interrogate process that control water quality dynamics [Topp2018]. Much of this slow evolution in methods and approaches comes from the inherent optical complexity of inland waters, where spectral signatures are the result of a complex mixture of inorganic sediment, organic sediment, algae, dissolved organic matter, and other constituents. Compared to oceanic remote sensing of water quality which benefits from robust, shared datasets of *in-situ* data paired with satellite overpass reflectance [@Blondeau-Patissier2014;@Bukata2013], progress on inland water algorithms is further impeded by the lack of a shared overpass dataset. 
+  Since the beginning of the Landsat missions, limnologists, oceanographers, and hydrologists have been interested in developing universal algorithms for extracting water quality information from remotely sensed images [@Holyer1978;@Ritchie1976;@Maul1975;@Klemas1973;@Clarke1970]. Since these early efforts, there has been almost fifty years of work with the basic goal of using spectral information to predict water quality parameters like total suspended solids (TSS), Chlorophyll a (Chl_a), colored dissolved organic matter (CDOM), and Secchi disk depth (SDD). However, progress towards universal algorithms and unified approaches has been slow [@Bukata2013;@Blondeau-Patissier2014;@Gholizadeh2016], with most papers published focusing on developing predictive methods as opposed to using predictions to interrogate processes that control water quality dynamics (Topp et al., 2018). Furthermore, most of the datasets used in these prior studies are inherently local in scale, often sampling a single waterbody on a single day corresponding to a satellite overpass (Topp et al., 2018). These limited datasets have contributed to the slow evolution in methods and approaches along with the inherent optical complexity of inland waters, where spectral signatures reflect a mixture of inorganic sediment, organic sediment, algae, dissolved organic matter, and other constituents. Compared to oceanic remote sensing of water quality which benefits from robust, open datasets paired with satellite overpass reflectance [@Blondeau-Patissier2014;@Bukata2013], progress on inland water algorithms is impeded by this lack of an open, merged satellite reflectance and *in-situ* water quality dataset. Such a dataset would facilitate more unified approaches to water quality remote sensing, ideally simplifying algorithm development to the point where remote estimates of water quality are integrated into our approaches for understanding inland water quality dynamics and their controls. 
 
-  Such data could go a long way towards, if not the holy-grail of universal predictive algorithms, at least towards more unified approaches tested on a universal dataset. Here, we create and share the largest such overpass dataset ever assembled for inland waters by using Google Earth Engine [@Gorelick2017] Landsat archive data from 1984-`r year(Sys.Date())` with data from the Water Quality Portal [@Read2017] and phase one of the "lake multi-scaled geospatial and temporal database (LAGOS-NE)"[@Soranno2017] for the conterminous USA and Alaska. Joining these datasets provides us with an unprecedented resource to model, predict, and understand the long-term and large-scale dynamics of variation in four key water clarity constituents: TSS, SDD, Chl_a, and dissolved organic carbon (DOC). We also outline and share our approach, code, and intermediate data for bringing these three free datasets together; generating a high-graded analysis-ready dataset for remote sensors of water quality. 
+Here, we create and share a merged dataset of water quality measurements and same-day satellite reflectance (which we call "overpasses"). This is the largest such overpass dataset ever assembled for inland waters. We use the Landsat TM/ETM+/OLI archive from 1984-`r year(Sys.Date())` using the using the Google Earth Engine platform [@Gorelick2017] in combination with data from the Water Quality Portal [@Read2017] and phase one of the "lake multi-scaled geospatial and temporal database (LAGOS-NE)"[@Soranno2017]. This data covers the conterminous USA and Alaska. Joining these datasets provides us with an unprecedented resource to model, predict, and understand the long-term and large-scale dynamics of variation in four key water clarity constituents: TSS, SDD, Chl_a, and dissolved organic carbon (DOC). We also outline and share our approach, code, and intermediate data for bringing these three free datasets together; generating a high-graded analysis-ready dataset for remote sensors of water quality. We hope that publishing the code will encourage developing similar matchup datasets for public water quality datasets like in New Zealand [@Ballantine2014] or Europe[@Lack2000]. 
 
 
 # Methods 
