--- a/1_wqdata/src/2_combined_wqp_munge.Rmd
+++ b/1_wqdata/src/2_combined_wqp_munge.Rmd
@@ -65,7 +65,8 @@ file.df.all <- tibble(path=harmonized.files,names=file.names)
 # The meat of these functions is in 1_wqdata/src/merge_unity_functions
 for(i in 1:nrow(file.df.all)) {
   df <- read_feather(file.df.all$path[i])
-  out <- date.time.splitter(df)
+  out <- date.time.splitter(df) %>%
+    select(-depth_conversion,characteristicName=parameter)
   
   write_feather(out,path=paste0('1_wqdata/out/unity/',
                               file.df.all$names[i],'_unity.feather'))
