--- a/UsingScipiper.Rmd
+++ b/UsingScipiper.Rmd
@@ -41,16 +41,6 @@ Once you've built some targets, you'll notice that files are appearing in an aut
 ## Install scipiper
 ```{r, eval=F}
 
-loop.seq <- c(seq(1,nrow(sites),by=300),nrow(sites))
-loop.seq
-
-
-
-for(i in 1:(length(loop.seq)-1)){
-  readWQPdata(siteid=sites$Site[seq(loop.seq[i],loop.seq[i+1],1)],
-              characteristicName=unnest(partition,Params)$CharacteristicNames) 
-  print(loop.seq[i])
-}
 #devtools::install_github('USGS-R/scipiper')
 
 library(scipiper)
@@ -105,7 +95,7 @@ Now that we have an inventory build we can do the full water quality pull using 
 
 ```{r, eval=F}
 #Warning this can take a long time if the inventory has changed
-#scipiper::scmake('1_wqdata/log/tasks_1_wqp.ind')
+scipiper::scmake('1_wqdata/log/tasks_1_wqp.ind')
 
 ```
 
@@ -115,7 +105,7 @@ The `remake.yml` file holds instructions some instructions for munging data and 
 
 ```{r, eval=F}
 #Generate the yaml file 
-scmake('tasks_1_wqp_merge.yml','remake.yml')
+scipiper::scmake('tasks_1_wqp_merge.yml','remake.yml')
 
 #Merge the data. 
 scipiper::scmake('1_wqdata/log/tasks_1_wqp_merge.ind')
