--- a/1_wqdata/src/3_wqp_merge_widen.Rmd
+++ b/1_wqdata/src/3_wqp_merge_widen.Rmd
@@ -35,7 +35,7 @@ knitr::opts_knit$set(root.dir='../..')
 #Get all the unified files
 #Read them in with a map_df read_csv
 unity.raw <- map_df(list.files('1_wqdata/out/unity',full.names=T),read_feather)
-
+#write_csv(unity.raw,'1_wqdata/out/unity/wqp_long_with_methods.csv')
 
 ```
 
