--- a/4_report/src/AquaSat_WRR_Submission/AquaSat_WRR_Submission.tex
+++ b/4_report/src/AquaSat_WRR_Submission/AquaSat_WRR_Submission.tex
@@ -19,7 +19,7 @@
 %
 
 %% To submit your paper:
-\documentclass[draft,linenumbers]{agujournal2018}
+\documentclass[]{agujournal2018}
 \usepackage{apacite}
 \usepackage{url} %this package should fix any errors with URLs in refs.
 %%%%%%%
@@ -391,8 +391,8 @@ issues associated with industry and environmental change
 \citep{Loveland2012}. For this project we are only using the three most
 recent Landsat mission datasets: Landsat 5 (Thematic Mapper, 1984-2012,
 192745 available images), Landsat 7 (Enhanced Thematic Mapper +,
-1999-present, 191366 images), and Landsat 8 (Operational Land Imager,
-2013-present, 61790 images). The total number of usable images is
+1999-present, 197564 images), and Landsat 8 (Operational Land Imager,
+2013-present, 69030 images). The total number of usable images is
 significantly lower because of cloud cover, which varies greatly by
 region and season. Furthermore, on May 31, 2003, the Landsat 7 scan line
 corrector failed, causing the Landsat 7 images after this date to have
