--- a/4_report/src/AquaSat_WRR_Submission/agujournal2018.cls
+++ b/4_report/src/AquaSat_WRR_Submission/agujournal2018.cls
@@ -86,7 +86,7 @@
 \RequirePackage{url}
 
 %% for better track changes
-%\RequirePackage{trackchanges}
+\RequirePackage{trackchanges}
 
 %% used for running head which is in light gray
 
